# desimodel

./: .coveragerc  .gitignore  .travis.yml  MANIFEST.in  README.rst  requirements.txt  rtd-requirements.txt  setup.cfg  setup.py
.github/workflows/: python-package.yml
doc/: api.rst  changes.rst  conf.py  fiberpos.rst  focalplane.rst  footprint.rst  generate_focalplane.inc  index.rst  psfspots.rst  release_notes.rst  testing.rst  throughput.rst  update_focalplane.inc  update_focalplane_excl.inc  update_inputs.rst
doc/nb/: CommWeather.ipynb  DESI-0347-Updates.ipynb  DESI-0347-v13.ipynb  DESI-0347_Throughput.ipynb  DomeClosedCI.csv  ELG_SNR.ipynb  KPNO_Weather.ipynb  MzLS_weather.fits  Seeing.ipynb  desimodel_v13.ipynb
doc/tex/: .gitignore  README.md
doc/tex/desi3087/: Makefile  weather.bib  weather.tex
doc/tex/desi3977/: Makefile  elgsnr.bib  elgsnr.tex
doc/tex/desi4975/: CommWeather.bib  CommWeather.tex  Makefile
etc/: desimodel.module  desimodel_data.sh  desimodel_sync_kpno.sh  desimodel_sync_kpno_cron.sh  desimodel_sync_kpno_force.sh  travis_desimodel_data.sh  travis_env_common.sh
py/desimodel/: __init__.py  _version.py  fastfiberacceptance.py  fibers.py  focalplane.py  footprint.py  healpix.py  install.py  io.py  seeing.py  trim.py  weather.py
py/desimodel/focalplane/: __init__.py  fieldrot.py  geometry.py  gfa.py  sim.py
py/desimodel/inputs/: __init__.py  ci.py  docdb.py  fiberpos.py  focalplane.py  focalplane_sync.py  focalplane_utils.py  gfa.py  throughput.py
py/desimodel/test/: __init__.py  desimodel_test_suite.py  test_fastfiberacceptance.py  test_fieldrot.py  test_focalplane.py  test_footprint.py  test_healpix.py  test_inputs.py  test_install.py  test_io.py  test_seeing.py  test_tiles.py  test_top_level.py  test_trim.py  test_weather.py
py/desimodel/test/data/: desi.yaml
