[metadata]
name = desimodel
version = attr: desimodel.__version__
author = DESI Collaboration
author_email = desi-data@desi.lbl.gov
license = BSD-3-Clause
license_files = LICENSE.rst
url = https://github.com/desihub/desimodel
description = DESI hardware information
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = True
github_project = desihub/desimodel
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Astronomy

[options]
zip_safe = True
package_dir =
    =py
# find_namespace avoids a warning about data directories when building packages.
packages = find_namespace:
include_package_data = True
python_requires = >=3.10
# setup_requires = setuptools_scm
install_requires =
    requests
    pyyaml
    configobj
    numpy
    astropy
    scipy
    matplotlib
    healpy
    desiutil
# scripts =
#     bin/install_desimodel_data

# [options.entry_points]
# console_scripts =
#     install_desimodel_data = desimodel.install:main

[options.extras_require]
test =
    pytest
coverage =
    pytest-cov
    coveralls
doc =
    Sphinx
    sphinx-rtd-theme

# [options.package_data]
# desimodel = data/*
# desimodel.test = t/*

[options.packages.find]
where = py
exclude = .github/*

[coverage:run]
relative_files = True
source =
    py/desimodel
omit =
    py/desimodel/_version.py
    py/desimodel/test/*
    */desimodel/_version.py
    */desimodel/test/*

# [coverage:paths]
# source =
#     py/desimodel/
#     */site-packages/desimodel/

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_

[pycodestyle]
# See https://pycodestyle.readthedocs.io/en/latest/intro.html#configuration
# for details of these configuration options.
#
# These are normally ignored by default:
# ignore = E121, E123, E126, E133, E226, E241, E242, E704, W503, W504
#
# Instead of the default set we add some that frequently appear, the first
# number is the approximate number of occurances:
#
# 9       E128 continuation line under-indented for visual indent
# 8       E201 whitespace after '['
# 9       E202 whitespace before ')'
# 40      E203 whitespace before ':'
# 14      E221 multiple spaces before operator
# 63      E225 missing whitespace around operator
# 139     E226 missing whitespace around arithmetic operator
# 263     E231 missing whitespace after ','
# 21      E241 multiple spaces after ','
# 12      E251 unexpected spaces around keyword / parameter equals
# 13      E261 at least two spaces before inline comment
# 15      E262 inline comment should start with '# '
# 156     E265 block comment should start with '# '
# 15      E275 missing whitespace after keyword
# 55      E302 expected 2 blank lines, found 1
# 10      W504 line break after binary operator
max-line-length = 160
ignore = E128, E201, E202, E203, E221, E225, E226, E231, E241, E251, E261, E262, E265, E275, E302, W504
