[metadata]
name = desimodel
version = attr: desimodel.__version__
author = DESI Collaboration
author_email = desi-data@desi.lbl.gov
license = BSD-3-Clause
license_files = LICENSE.rst
url = https://github.com/desihub/desimodel
description = DESI hardware information
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = True
github_project = desihub/desimodel
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Astronomy

[options]
zip_safe = True
package_dir =
    =py
# find_namespace avoids a warning about data directories when building packages.
packages = find_namespace:
include_package_data = True
python_requires = >=3.10
# setup_requires = setuptools_scm
install_requires =
    requests
    pyyaml
    configobj
    numpy
    astropy
    scipy
    matplotlib
    healpy
    desiutil
# scripts =
#     bin/install_desimodel_data

# [options.entry_points]
# console_scripts =
#     install_desimodel_data = desimodel.install:main

[options.extras_require]
# specter currently is not in PyPI, so uncomment when it is available.
# Also modify test requirements so that specter is available to tests.
# Finally note that specter brings in a dependency on numba.
# all =
#     specter
test =
    pytest
coverage =
    pytest-cov
    coveralls
doc =
    Sphinx
    sphinx-rtd-theme

# [options.package_data]
# desimodel = data/*
# desimodel.test = t/*

[options.packages.find]
where = py
exclude = .github/*

[coverage:run]
relative_files = True
source =
    py/desimodel
omit =
    py/desimodel/_version.py
    py/desimodel/test/*
    */desimodel/_version.py
    */desimodel/test/*

# [coverage:paths]
# source =
#     py/desimodel/
#     */site-packages/desimodel/

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_

[pycodestyle]
# See https://pycodestyle.readthedocs.io/en/latest/intro.html#configuration
# for details of these configuration options.
#
# These are normally ignored by default:
# ignore = E121, E123, E126, E133, E226, E241, E242, E704, W503, W504
#
# In addition to the default set we add:
# - E731: do not assign a lambda expression, use a def
# - E741: do not use variables named 'l', 'O', or 'I' -- because, for example,
#   'l' might refer to Galactic longitude.
max-line-length = 160
ignore = E121, E123, E126, E133, E226, E241, E242, E704, E731, E741, W503, W504
